fixed font problems on mobile

--- a/app/react/controllers/Viewer/scss/viewer.scss
+++ b/app/react/controllers/Viewer/scss/viewer.scss
@@ -5,10 +5,10 @@
   .panel-content {
     position: relative;
     -webkit-overflow-scrolling: touch;
+    -webkit-text-size-adjust: none;
   }
 
   .pages {
-
 
     span.reference {
       background-color: yellow;
@@ -22,7 +22,7 @@
       $width: $i * 25px;
 
       @if($width < $mobileWidth) {
-        $pagesContainerWidthpercentage: 0.9;
+        $pagesContainerWidthpercentage: 0.8;
       }
 
       $zoom: ($width * $pagesContainerWidthpercentage) / $pageWidth;
@@ -33,6 +33,7 @@
 
       @media (min-width: $width - 50px) and (max-width: $width) {
         zoom: $zoom;
+        -webkit-text-size-adjust: $zoom * 100%;
       }
     }
 
